; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_xmit.c___ip_vs_dst_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_xmit.c___ip_vs_dst_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dst_entry = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32* (%struct.dst_entry*, i32)* }
%struct.ip_vs_dest = type { i64, %struct.dst_entry*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dst_entry* (%struct.ip_vs_dest*, i64)* @__ip_vs_dst_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dst_entry* @__ip_vs_dst_check(%struct.ip_vs_dest* %0, i64 %1) #0 {
  %3 = alloca %struct.dst_entry*, align 8
  %4 = alloca %struct.ip_vs_dest*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.dst_entry*, align 8
  store %struct.ip_vs_dest* %0, %struct.ip_vs_dest** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %4, align 8
  %8 = getelementptr inbounds %struct.ip_vs_dest, %struct.ip_vs_dest* %7, i32 0, i32 1
  %9 = load %struct.dst_entry*, %struct.dst_entry** %8, align 8
  store %struct.dst_entry* %9, %struct.dst_entry** %6, align 8
  %10 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %11 = icmp ne %struct.dst_entry* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store %struct.dst_entry* null, %struct.dst_entry** %3, align 8
  br label %45

13:                                               ; preds = %2
  %14 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %15 = getelementptr inbounds %struct.dst_entry, %struct.dst_entry* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %24, label %18

18:                                               ; preds = %13
  %19 = load i64, i64* %5, align 8
  %20 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %4, align 8
  %21 = getelementptr inbounds %struct.ip_vs_dest, %struct.ip_vs_dest* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %19, %22
  br i1 %23, label %24, label %41

24:                                               ; preds = %18, %13
  %25 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %26 = getelementptr inbounds %struct.dst_entry, %struct.dst_entry* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32* (%struct.dst_entry*, i32)*, i32* (%struct.dst_entry*, i32)** %28, align 8
  %30 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %31 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %4, align 8
  %32 = getelementptr inbounds %struct.ip_vs_dest, %struct.ip_vs_dest* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = call i32* %29(%struct.dst_entry* %30, i32 %33)
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %41

36:                                               ; preds = %24
  %37 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %4, align 8
  %38 = getelementptr inbounds %struct.ip_vs_dest, %struct.ip_vs_dest* %37, i32 0, i32 1
  store %struct.dst_entry* null, %struct.dst_entry** %38, align 8
  %39 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %40 = call i32 @dst_release(%struct.dst_entry* %39)
  store %struct.dst_entry* null, %struct.dst_entry** %3, align 8
  br label %45

41:                                               ; preds = %24, %18
  %42 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  %43 = call i32 @dst_hold(%struct.dst_entry* %42)
  %44 = load %struct.dst_entry*, %struct.dst_entry** %6, align 8
  store %struct.dst_entry* %44, %struct.dst_entry** %3, align 8
  br label %45

45:                                               ; preds = %41, %36, %12
  %46 = load %struct.dst_entry*, %struct.dst_entry** %3, align 8
  ret %struct.dst_entry* %46
}

declare dso_local i32 @dst_release(%struct.dst_entry*) #1

declare dso_local i32 @dst_hold(%struct.dst_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
